--- a/index.html
+++ b/index.html
@@ -52,30 +52,31 @@
         <section class="intro-site">
             <img src="img/image-birth.png">
             <img src="img/image-clound.png">
-            <span class="intro-title">GRĂDINIȚA TĂRÂMUL ZÂNELOR</span>
+            <span class="intro-title title">GRĂDINIȚA TĂRÂMUL ZÂNELOR</span>
             <span class="intro-subtitle">Exploram curioși, descoperim cu uimire, cântăm tare, dansăm liber, creștem armonios.</span>
-            <a href="#">afla mai multe <i class="fas fa-arrow-right"></i></a>
+            <a href="#" class="button">afla mai multe <i class="fas fa-arrow-right"></i></a>
+            <img src="svg/wave.svg" class="wave">
         </section>
 
         <section class="choseUs">
 
-            <img src="" class="wave">
-            <h3>DE CE SA NE ALEGI PE NOI</h3>
-            <h1>Valorile noastre de baza</h1>
+
+            <h3 class="title">DE CE SA NE ALEGI PE NOI</h3>
+            <h1 class="subtitle">Valorile noastre de baza</h1>
             <span>Împreuna putem valorifica capitațiile copilului dumneavoastră.</span>
-            <img src="" class="bee">
+            <img src="img/image-bee.png" class="bee">
 
             <div class="choseUs-cards">
 
 
                 <div class="card cRed">
-                    <img src="">
+                    <div class="cardImg"><img src="img/image-fcb-1.jpg"></div>
                     <h3>Invatare si joaca</h3>
                     <p>Pentru o educație cat mai sporita si mai confortabilă pentru copilul dumneavoastră folosim metode interactive si distractive.</p>
                 </div>
 
                 <div class="card cYellow">
-                    <img src="">
+                    <div class="cardImg"><img src="img/image-fcb-2.jpg"></div>
                     <h2>Nutritie si sanatate</h2>
                     <p>
                         Împreuna putem spori gândirea copilului tau legata de nutriție si sănătate. Oferim copiilor cursuri pentru dezvoltarea stilului de viată sanatos.
@@ -83,7 +84,7 @@
                 </div>
 
                 <div class="card cGreen">
-                    <img src="">
+                    <div class="cardImg"><img src="img/image-fcb-3.jpg"></div>
                     <h2>Profesori excelenti</h2>
                     <p>
                         Experiența si dedicația echipei de profesori o sa va ajute copii sa se dezvolte din mai multe puncte de vedere si sa descopere noi talente.
@@ -91,7 +92,7 @@
                 </div>
 
                 <div class="card cBlue">
-                    <img src="">
+                    <div class="cardImg"><img src="img/image-fcb-4.jpg"></div>
                     <h2>Mediu atractiv</h2>
                     <p>
                         Evenimentele pline de culoare ale grădiniței Tărâmul Zânelor este potrivit pentru vârsta copiilor, făcându-i mai comunicativi.
@@ -106,11 +107,12 @@
                     <h2><span>Esti interesat</span> cum poti sa iti inscrii copilul la Gradinita Tarâmul Zânelor?</h2>
                     <p>Lăsați-va copilul in grija gradinitei Tarâmul Zânelor pentru a-l ajuta să se dezvolte într-un mod placut si eficient în toate aspectele.</p>
                 </div>
-                <a href="#">Inscrieti Copilul</a>
+                <a href="#" class="button">Inscrieti Copilul <i class="fas fa-arrow-right"></i></a>
             </div>
         </section>
 
         <section class="guide">
+            <img src="img/image-left-home.png">
             <div class="guide-firstP">
                 <h2>Ghidarea tineri generatii spre reusita</h2>
                 <p>
@@ -140,59 +142,67 @@
                 </p>
             </div>
 
-            <a href="#">afla mai multe <i class="fas fa-arrow-right"></i></a>
+            <a href="#" class="button">afla mai multe <i class="fas fa-arrow-right"></i></a>
         </section>
 
         <section class="ourValues">
             <div class="oV-header">
-                <h3>DE CE SA NE ALEGI</h3>
-                <h2>Valorile noastre</h2>
+                <img src="img/image-home-2.png" class="sun">
+                <h3 class="title">DE CE SA NE ALEGI</h3>
+                <h2 class="subtitle">Valorile noastre</h2>
                 <span>Împreuna putem descoperi si dezvolta talentele copiilor.</span>
-                <img src="" class="bee">
-                <img src="" class="sun">
-                <img src="" class="rocket">
+                <img src="img/image-bee.png" class="bee">
+
+                <img src="img/image-home-3.png" class="rocket">
             </div>
             <div class="oV-love">
-                <span>Dragoste</span>
-                <p>
+                <img src="img/heart_PNG51183-2.png" class="ov-img">
+                <span class="title-color">Dragoste</span>
+                <p class="gray-text">
                     Dragostea este în fruntea a tot ceea ce facem iar ceea ce facem nu este doar un serviciu ci este o extensie a iubirii noastre pentru copii.
                 </p>
-                <img src="" class="ov-img">
+
             </div>
 
             <div class="ov-trust">
-                <span>Încrederea</span>
-                <p>
+                <img src="img/trust.png" class="ov-img">
+                <span class="title-color">Încrederea</span>
+                <p class="gray-text">
                     Ne străduim spre excelenţă, suntem cinstiţi în tot ceea ce facem si pentru asta am promis să punem binele copilului înaintea oricarei decizii si acţiuni.
                 </p>
-                <img src="" class="ov-img">
+
             </div>
 
-            <div class="ov-connect">
-                <span>Conectarea</span>
-                <p>
-                    Construim relaţii de încredere, de acceptare şi sprijin cu toţi partenerii noştri, copii, părinţi, comunitate.
-                </p>
-                <img src="" class="ov-img">
-            </div>
+
 
             <div class="ov-development">
-                <span>Dezvoltarea</span>
-                <p>
+                <img src="img/dev.png" class="ov-img">
+                <span class="title-color">Dezvoltarea</span>
+                <p class="gray-text">
                     Suntem deschişi la învaţare şi îmbrăţişăm curiozitatea si inovarea.
                 </p>
-                <img src="" class="ov-img">
+
             </div>
 
             <div class="ov-cautation">
-                <span>Atenţia</span>
-                <p>
+                <img src="img/cautation.png" class="ov-img">
+                <span class="title-color">Atenţia</span>
+                <p class="gray-text">
                     Suntem conştienţi de impactul acţiunilor noastre şi există mereu un scop atent ales în spatele a tot ceea ce facem.
                 </p>
-                <img src="" class="ov-img">
+
             </div>
 
-            <img src="" class="rac">
+            <div class="ov-connect">
+                <img src="img/share.png" class="ov-img">
+                <span class="title-color">Conectarea</span>
+                <p class="gray-text">
+                    Construim relaţii de încredere, de acceptare şi sprijin cu toţi partenerii noştri, copii, părinţi, comunitate.
+                </p>
+
+            </div>
+
+            <img src="img/image-home-1.png" class="rac">
         </section>
 
         <section class="study">
@@ -258,8 +268,8 @@
 
         <section class="classes">
             <div class="classes-header">
-                <h3>ÎNVĂȚAREA PRIN JOACĂ</h3>
-                <h2>Clasele noastre</h2>
+                <h3 class="title">ÎNVĂȚAREA PRIN JOACĂ</h3>
+                <h2 class="subtitle">Clasele noastre</h2>
                 <span>Gradinita Taramul Zanelor, pune întotdeauna calitatea învățării copiilor pe primul loc, de asemenea siguranta si prosperitatea acesora.</span>
                 <img src="" class="bee">
             </div>
@@ -301,10 +311,10 @@
         </section>
 
         <section class="tastymonials">
-            <h3></h3>
-            <h2></h2>
-            <span></span>
-            <img src="" class="bee">
+            <h3 class="title">CE PARERE AU PARINTII DESPRE GRADINITA NOASTRA</h3>
+            <h2 class="subtitle">Recenzii</h2>
+            <span>Sa exploram ce au de spus parintii despre noi.</span>
+            <img src="img/image-bee.png" class="bee">
             <div class="swipe-container">
                 <div class="sw-card">
                     <img src="">
