--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
             </div>
 
 
+            <img src="img/child-man.png" class="child">
+
+
 
             <div class="ov-development">
                 <img src="img/dev.png" class="ov-img">
@@ -206,9 +209,9 @@
         </section>
 
         <section class="study">
-            <div class="study-header">
-                <span>PROGRAMUL NOSTRU</span> <img src="">
-            </div>
+
+            <span>PROGRAMUL NOSTRU</span> <img src="img/image-bee.png" class="bee">
+
             <h2>Domenii de studiu:</h2>
             <p>
                 Procesul instructiv educativ are la bază următoarele domenii experențiale propuse prin curriculum național:
@@ -216,7 +219,7 @@
             <div class="areas">
                 <div class="area area1">
                     <div class="area-uppercontent">
-                        <span class="bear"><img src=""></span><span>Domeniul Limbă și Comunicare</span><span class="plus"></span>
+                        <span class="bear"><img src="img/ursulet.png"></span><span>Domeniul Limbă și Comunicare</span><span class="plus"><i class="fas fa-plus"></i></span>
                     </div>
                     <div class="area-downcontent">
                         Are ca scop principal dezvoltarea capacităţii de exprimare orală, de înţelegere şi utilizare corectă a semnificaţiilor structurilor verbale orale. Totodată, prin activităţile desfăşurate, ne propunem să dezvoltăm creativitatea şi expresivitatea limbajului
@@ -225,7 +228,7 @@
                 </div>
                 <div class="area area2">
                     <div class="area-uppercontent">
-                        <span class="car"><img src=""></span><span>Domeniul Ştiinţă (cunoaşterea mediului/activităţi matematice)</span><span class="plus"></span>
+                        <span class="car"><img src="img/masinuta.png"></span><span>Domeniul Ştiinţă (cunoaşterea mediului/activităţi matematice)</span><span class="plus"><i class="fas fa-plus"></i></span>
                     </div>
                     <div class="area-downcontent">
                         Cunoasterea mediului- În cadrul temelor abordate se transmit noi experienţe şi cunoștinţe despre oameni şi mediu. Cunoaşterea mediului este o categorie de activitate menită să stimuleze curiozitatea privind explicarea şi înţelegerea lumii înconjurătoare
@@ -237,7 +240,7 @@
                 </div>
                 <div class="area area3">
                     <div class="area-uppercontent">
-                        <span class="rubic"><img src=""></span><span>Domeniul Psihomotric</span><span class="plus"></span>
+                        <span class="rubic"><img src="img/rubic.png"></span><span>Domeniul Psihomotric</span><span class="plus"><i class="fas fa-plus"></i></span>
                     </div>
                     <div class="area-downcontent">
                         Prin activităţile de Educaţie Fizică, ne dorim formarea şi dezvoltarea deprinderilor motrice de bază, stimularea calităţilor intelectuale, de voinţă şi afective în vederea aplicării independente a deprinderilor însuşite, dar şi cunoaşterea deprinderilor
@@ -246,7 +249,7 @@
                 </div>
                 <div class="area area4">
                     <div class="area-uppercontent">
-                        <span class="cubs"><img src=""></span><span>Domeniul Om şi Societate (educaţie pentru societate/activităţi practice)</span><span class="plus"></span>
+                        <span class="cubs"><img src="img/icon-accordion-4.png"></span><span>Domeniul Om şi Societate (educaţie pentru societate/activităţi practice)</span><span class="plus"><i class="fas fa-plus"></i></span>
                     </div>
                     <div class="area-downcontent">
                         În cadrul activitatilor de Educaţie pentru Societate se urmăresc aspecte interculturale despre om şi societate, descoperirea cotidianului/datini şi obiceiuri atât din cultura germană cât si cea româna, bazate pe exemple şi aşezarea lor în contextul propriului
@@ -256,7 +259,7 @@
                 </div>
                 <div class="area area5">
                     <div class="area-uppercontent">
-                        <span class="tambal"><img src=""></span><span>Domeniul Estetic şi Creativ (educaţie muzicală/activităţi artistico-plastice)</span><span class="plus"></span>
+                        <span class="tambal"><img src="img/tambal.png"></span><span>Domeniul Estetic şi Creativ (educaţie muzicală/activităţi artistico-plastice)</span><span class="plus"><i class="fas fa-plus"></i></span>
                     </div>
                     <div class="area-downcontent">
                         Activităţi de Educaţie Muzicală prin care urmărim să formăm capacitatea de receptare a lumii sonore şi a muzicii, a capacităţii de exprimare prin muzică, dar şi să facem cunoscute preşcolarilor marile valori ale creaţiei muzicale naţionale şi universale.
@@ -268,43 +271,43 @@
 
         <section class="classes">
             <div class="classes-header">
-                <h3 class="title">ÎNVĂȚAREA PRIN JOACĂ</h3>
-                <h2 class="subtitle">Clasele noastre</h2>
-                <span>Gradinita Taramul Zanelor, pune întotdeauna calitatea învățării copiilor pe primul loc, de asemenea siguranta si prosperitatea acesora.</span>
-                <img src="" class="bee">
+                <h3 class="pink-text">ÎNVĂȚAREA PRIN JOACĂ</h3>
+                <h2 class="title-color">Clasele noastre</h2>
+                <span class="gray-text">Gradinita Taramul Zanelor, pune întotdeauna calitatea învățării copiilor pe primul loc, de asemenea siguranta si prosperitatea acesora.</span>
+                <img src="img/image-bee.png" class="bee">
             </div>
 
             <div class="classes-cards">
                 <div class="card">
-                    <img src="">
+                    <img src="img/classes-6.jpg">
                     <h3>Bienchengruppe - Magic Number</h3>
-                    <p>
+                    <p class="gray-text">
                         Grupa care ii indurează pe copiii spre recunoașterea primele numere, acest lucru fiind adecvate si eficient din punct de vedere al dezvoltării.
                     </p>
                     <hr>
-                    <span><i class="fas fa-baby"></i> Vârsta: 3-4 ani</span>
+                    <span class="gray-spanCard"><i class="fas fa-baby"></i> Vârsta: 3-4 ani</span>
                     <a href="#"><i class="fas fa-book-reader"></i> Afla mai multe</a>
                 </div>
 
                 <div class="card">
-                    <img src="">
+                    <img src="img/image-fcb-5.jpg">
                     <h3>Sternchengruppe – Kid And Future</h3>
-                    <p>
+                    <p class="gray-text">
                         Aceasta grupa este dedicata dezvoltării si descoperirea talentelor copilului. Oferim oportunitatea copiilor sa se descopere prin joacă.
                     </p>
                     <hr>
-                    <span><i class="fas fa-baby"></i> Vârsta: 4-5 ani</span>
+                    <span class="gray-spanCard"><i class="fas fa-baby"></i> Vârsta: 4-5 ani</span>
                     <a href="#"><i class="fas fa-book-reader"></i> Afla mai multe</a>
                 </div>
 
                 <div class="card">
-                    <img src="">
+                    <img src="img/classes-4.jpg">
                     <h3>Schmetterliggrupp – Music For The Imagination</h3>
-                    <p>
+                    <p class="gray-text">
                         Un copil care cânta este un copil cu adevărat fericit. Copiii sunt atrași de muzic si le oferă o stare de bine. Pot învață mult mai repede lucruri noi.
                     </p>
                     <hr>
-                    <span><i class="fas fa-baby"></i> Vârsta: 5-6 ani</span>
+                    <span class="gray-spanCard"><i class="fas fa-baby"></i> Vârsta: 5-6 ani</span>
                     <a href="#"><i class="fas fa-book-reader"></i> Afla mai multe</a>
                 </div>
             </div>
@@ -313,11 +316,11 @@
         <section class="tastymonials">
             <h3 class="title">CE PARERE AU PARINTII DESPRE GRADINITA NOASTRA</h3>
             <h2 class="subtitle">Recenzii</h2>
-            <span>Sa exploram ce au de spus parintii despre noi.</span>
+            <span class="gray-text">Sa exploram ce au de spus parintii despre noi.</span>
             <img src="img/image-bee.png" class="bee">
             <div class="swipe-container">
                 <div class="sw-card">
-                    <img src="">
+                    <img src="img/testi-5.jpg">
                     <span>Ramona Maria</span>
                     <div class="t-stars">
                         <i class="fas fa-star"></i>
