added animations - css

--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
 
     <main>
         <section class="intro-site">
-            <img src="img/image-birth.png">
-            <img src="img/image-clound.png">
-            <span class="intro-title title">GRĂDINIȚA TĂRÂMUL ZÂNELOR</span>
-            <span class="intro-subtitle">Exploram curioși, descoperim cu uimire, cântăm tare, dansăm liber, creștem armonios.</span>
+            <img src="img/image-birth.png" class="bird">
+            <img src="img/image-clound.png" class="cloud">
+
+            <div class="intro-text">
+                <span class="intro-title title">GRĂDINIȚA TĂRÂMUL ZÂNELOR</span>
+                <span class="intro-subtitle">Exploram curioși, descoperim cu uimire, cântăm tare, dansăm liber, creștem armonios.</span>
+            </div>
+
             <a href="#" class="button">afla mai multe <i class="fas fa-arrow-right"></i></a>
             <img src="svg/wave.svg" class="wave">
         </section>
@@ -107,8 +111,9 @@
                     <h2><span>Esti interesat</span> cum poti sa iti inscrii copilul la Gradinita Tarâmul Zânelor?</h2>
                     <p>Lăsați-va copilul in grija gradinitei Tarâmul Zânelor pentru a-l ajuta să se dezvolte într-un mod placut si eficient în toate aspectele.</p>
                 </div>
-                <a href="#" class="button">Inscrieti Copilul <i class="fas fa-arrow-right"></i></a>
+
             </div>
+            <a href="#" class="button">Inscrieti Copilul <i class="fas fa-arrow-right"></i></a>
         </section>
 
         <section class="guide">
@@ -380,49 +385,61 @@
         <section class="stats">
             <div class="box">
                 <i class="fas fa-calendar-alt"></i>
-                <span>9</span>
+                <span class="stats-1span">9</span>
                 <span>Ani De Experiența</span>
             </div>
 
             <div class="box">
                 <i class="fas fa-handshake"></i>
-                <span>365 +</span>
+                <span class="stats-1span">365 +</span>
                 <span>Părinți Mulțumiți</span>
             </div>
 
             <div class="box">
                 <i class="fas fa-chalkboard-teacher"></i>
-                <span>20 +</span>
+                <span class="stats-1span">20 +</span>
                 <span>Educatori</span>
             </div>
         </section>
 
         <section class="teachers">
-            <h3>DESPRE PROFESORI NOSTRI</h3>
-            <h2>Profesorii nostri</h2>
-            <p>
+            <h3 class="pink-text">DESPRE PROFESORII NOSTRI</h3>
+            <h2 class="title-color">Profesorii nostri</h2>
+            <p class="gray-text">
                 Avem un raport excelent intre profesor la copil la grădinița noastră pentru a ne asigura că fiecare copil primește atenția de care are nevoie. Întreg personalul ajută fiecare copil să se dezvolte armonios, să îşi dobândească propria autonomie şi competenţele
                 care să îi permită să îşi construiască învăţăturile fundamentale, în funcţie de ritmul propriu de dezvoltare şi de creştere.
             </p>
-            <img src="" class="bee">
+            <img src="img/image-bee.png" class="bee">
             <img src="" id="birds">
             <a href="#">Citeste mai mult <i class="fas fa-arrow-right"></i></a>
         </section>
 
         <section class="holidays">
-            <span>April 04, 2021 at 09:00 AM</span>
+            <span class="notice">April 04, 2021 at 09:00 AM</span>
             <p>
                 „OSTERFEST”- SĂRBĂTORILE PASCALE
             </p>
 
             <div class="time">
-                <span>days</span>
-                <span>hours</span>
-                <span>minutes</span>
-                <span>seconds</span>
+                <div class="time-item">
+                    <div class="time-nmb"></div>
+                    <div class="time-text">Days</div>
+                </div>
+                <div class="time-item">
+                    <div class="time-nmb"></div>
+                    <div class="time-text">Hours</div>
+                </div>
+                <div class="time-item">
+                    <div class="time-nmb"></div>
+                    <div class="time-text">Minutes</div>
+                </div>
+                <div class="time-item">
+                    <div class="time-nmb"></div>
+                    <div class="time-text">Seconds</div>
+                </div>
             </div>
 
-            <a href="#">vezi toate evenimentele <i class="fas fa-arrow-right"></i></a>
+            <a href="#" class="button">vezi toate evenimentele <i class="fas fa-arrow-right"></i></a>
         </section>
     </main>
 
