updated css animations

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <section class="study">
 
-            <span>PROGRAMUL NOSTRU</span> <img src="img/image-bee.png" class="bee">
+            <span class="pink-text">PROGRAMUL NOSTRU</span> <img src="img/image-bee.png" class="bee">
 
             <h2>Domenii de studiu:</h2>
             <p>
