updated css animations

--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@
         <section class="classes">
             <div class="classes-header">
                 <h3 class="pink-text">ÎNVĂȚAREA PRIN JOACĂ</h3>
-                <h2 class="title-color">Clasele noastre</h2>
+                <h2 class="title-color">Clasele <br> noastre</h2>
                 <span class="gray-text">Gradinita Taramul Zanelor, pune întotdeauna calitatea învățării copiilor pe primul loc, de asemenea siguranta si prosperitatea acesora.</span>
-                <img src="img/image-bee.png" class="bee">
-            </div>
 
+            </div>
+            <img src="img/image-bee.png" class="bee">
             <div class="classes-cards">
                 <div class="card">
                     <img src="img/classes-6.jpg">
