--- a/index.html
+++ b/index.html
@@ -441,6 +441,25 @@
 
             <a href="#" class="button">vezi toate evenimentele <i class="fas fa-arrow-right"></i></a>
         </section>
+
+        <section class="news">
+            <h3 class="pink-text">CE SE ÎNTÂMPLĂ ÎN BLOGUL NOSTRU?</h3>
+            <h2 class="title-color">Stiri recente</h2>
+            <span class="gray-text">Afla cele mai noi noutati legate de gradinita Tărâmul Zânelor</span>
+            <img src="img/image-bee.png" class="bee">
+            <div class="news-content">
+                <img src="img/img-post-4.jpg">
+                <a href="#">De ce copiii au nevoie de un mediu sanatos?</a>
+                <p class="gray-text">Un mediu placut si distractiv. Acesta este un test</p>
+                <a href="#">Citeste mai mult</a>
+            </div>
+        </section>
+
+        <section class="joinUs">
+            <p><span>Ești interesat</span> cum poți sa iți înscrii copilul la Grădinița Tărâmul Zânelor?</p>
+            <p>Vă interesează o educație preșcolară bună pentru copilul dumneavoastră? Grădinița noastră este decizia corectă!</p>
+            <a href="#" class="button">inscrieti-va</a>
+        </section>
     </main>
 
     <footer></footer>
