updated js - animations by scrolling

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <span class="intro-subtitle">Exploram curioși, descoperim cu uimire, cântăm tare, dansăm liber, creștem armonios.</span>
             </div>
 
-            <a href="#" class="button">afla mai multe <i class="fas fa-arrow-right"></i></a>
+            <a href="#" class="button" id="introBTN">afla mai multe <i class="fas fa-arrow-right"></i></a>
             <img src="svg/wave.svg" class="wave">
         </section>
 
@@ -113,7 +113,7 @@
                 </div>
 
             </div>
-            <a href="#" class="button">Inscrieti Copilul <i class="fas fa-arrow-right"></i></a>
+            <a href="#" class="button" id="signBTN">Inscrieti Copilul <i class="fas fa-arrow-right"></i></a>
         </section>
 
         <section class="guide">
@@ -147,7 +147,7 @@
                 </p>
             </div>
 
-            <a href="#" class="button">afla mai multe <i class="fas fa-arrow-right"></i></a>
+            <a href="#" class="button" id="guideBTN">afla mai multe <i class="fas fa-arrow-right"></i></a>
         </section>
 
         <section class="ourValues">
@@ -215,7 +215,7 @@
 
         <section class="study">
 
-            <span class="pink-text">PROGRAMUL NOSTRU</span> <img src="img/image-bee.png" class="bee">
+            <span class="pink-text">PROGRAMUL NOSTRU</span> <img src="img/image-bee.png" class="bee beeSlide">
 
             <h2>Domenii de studiu:</h2>
             <p>
@@ -281,7 +281,7 @@
                 <span class="gray-text">Gradinita Taramul Zanelor, pune întotdeauna calitatea învățării copiilor pe primul loc, de asemenea siguranta si prosperitatea acesora.</span>
 
             </div>
-            <img src="img/image-bee.png" class="bee">
+            <img src="img/image-bee.png" class="bee blinkBee">
             <div class="classes-cards">
                 <div class="card">
                     <img src="img/classes-6.jpg">
@@ -409,7 +409,7 @@
                 Avem un raport excelent intre profesor la copil la grădinița noastră pentru a ne asigura că fiecare copil primește atenția de care are nevoie. Întreg personalul ajută fiecare copil să se dezvolte armonios, să îşi dobândească propria autonomie şi competenţele
                 care să îi permită să îşi construiască învăţăturile fundamentale, în funcţie de ritmul propriu de dezvoltare şi de creştere.
             </p>
-            <img src="img/image-bee.png" class="bee">
+            <img src="img/image-bee.png" class="bee blinkBee">
             <img src="" id="birds">
             <a href="#">Citeste mai mult <i class="fas fa-arrow-right"></i></a>
         </section>
@@ -463,6 +463,7 @@
     </main>
 
     <footer></footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
