--- a/index.html
+++ b/index.html
@@ -222,55 +222,7 @@
                 Procesul instructiv educativ are la bază următoarele domenii experențiale propuse prin curriculum național:
             </p>
             <div class="areas">
-                <div class="area area1">
-                    <div class="area-uppercontent">
-                        <span class="bear"><img src="img/ursulet.png"></span><span>Domeniul Limbă și Comunicare</span><span class="plus"><i class="fas fa-plus"></i></span>
-                    </div>
-                    <div class="area-downcontent">
-                        Are ca scop principal dezvoltarea capacităţii de exprimare orală, de înţelegere şi utilizare corectă a semnificaţiilor structurilor verbale orale. Totodată, prin activităţile desfăşurate, ne propunem să dezvoltăm creativitatea şi expresivitatea limbajului
-                        oral şi să educăm exprimarea corectă din punct de vedere fonetic, lexical şi sintactic a celor mici).
-                    </div>
-                </div>
-                <div class="area area2">
-                    <div class="area-uppercontent">
-                        <span class="car"><img src="img/masinuta.png"></span><span>Domeniul Ştiinţă (cunoaşterea mediului/activităţi matematice)</span><span class="plus"><i class="fas fa-plus"></i></span>
-                    </div>
-                    <div class="area-downcontent">
-                        Cunoasterea mediului- În cadrul temelor abordate se transmit noi experienţe şi cunoștinţe despre oameni şi mediu. Cunoaşterea mediului este o categorie de activitate menită să stimuleze curiozitatea privind explicarea şi înţelegerea lumii înconjurătoare
-                        prin explorarea acestuia. Dezvoltarea capacităţii de observare şi stabilire de relaţii cauzale, spaţiale, temporale, utilizarea unui limbaj adecvat în prezentarea unor fenomene din natură şi mediul înconjurător, dar şi formarea
-                        şi exersarea unor deprinderi de îngrijire şi ocrotire a mediului înconjurător, în vederea educării unei atitudini pozitive faţă de acesta reprezintă obiective ce se doresc a fi atinse prin activităţile instructiv-educative desfăşurate.
-                        <br> <br> Activitatea matematică îşi propune dezvoltarea operaţiilor intelectuale prematematice, a capacităţii de a înţelege şi utiliza numere, cifre, unităţi de măsură, figuri geometrice, precum şi a capacităţii de rezolvare de
-                        situaţii problematice, prin achiziţia de strategii adecvate.
-                    </div>
-                </div>
-                <div class="area area3">
-                    <div class="area-uppercontent">
-                        <span class="rubic"><img src="img/rubic.png"></span><span>Domeniul Psihomotric</span><span class="plus"><i class="fas fa-plus"></i></span>
-                    </div>
-                    <div class="area-downcontent">
-                        Prin activităţile de Educaţie Fizică, ne dorim formarea şi dezvoltarea deprinderilor motrice de bază, stimularea calităţilor intelectuale, de voinţă şi afective în vederea aplicării independente a deprinderilor însuşite, dar şi cunoaşterea deprinderilor
-                        igienico-sanitare pentru menţinerea stării de sănătate.
-                    </div>
-                </div>
-                <div class="area area4">
-                    <div class="area-uppercontent">
-                        <span class="cubs"><img src="img/icon-accordion-4.png"></span><span>Domeniul Om şi Societate (educaţie pentru societate/activităţi practice)</span><span class="plus"><i class="fas fa-plus"></i></span>
-                    </div>
-                    <div class="area-downcontent">
-                        În cadrul activitatilor de Educaţie pentru Societate se urmăresc aspecte interculturale despre om şi societate, descoperirea cotidianului/datini şi obiceiuri atât din cultura germană cât si cea româna, bazate pe exemple şi aşezarea lor în contextul propriului
-                        mediu de viaţă; <br> Activitatea Practică are în vedere formarea şi consolidarea unor abilităţi practice specifice nivelului de dezvoltare motrică, îmbogaţirea cunoştinţelor despre materiale şi caracteristicile
-                        lor, precum şi despre tehnici de lucru necesare prelucrării acestora în scopul realizării unor proiecte creative.
-                    </div>
-                </div>
-                <div class="area area5">
-                    <div class="area-uppercontent">
-                        <span class="tambal"><img src="img/tambal.png"></span><span>Domeniul Estetic şi Creativ (educaţie muzicală/activităţi artistico-plastice)</span><span class="plus"><i class="fas fa-plus"></i></span>
-                    </div>
-                    <div class="area-downcontent">
-                        Activităţi de Educaţie Muzicală prin care urmărim să formăm capacitatea de receptare a lumii sonore şi a muzicii, a capacităţii de exprimare prin muzică, dar şi să facem cunoscute preşcolarilor marile valori ale creaţiei muzicale naţionale şi universale.
-                        <br> <br> Activități de Educație Plastică care își propun să formeze deprinderi de lucru pentru realizarea unor desene, picturi, modelaje şi să stimuleze expresivitatea şi creativitatea prin limbaj artistic-plastic.
-                    </div>
-                </div>
+
             </div>
         </section>
 
@@ -336,7 +288,7 @@
                     </div>
                 </div>
                 <div class="sw-card">
-                    <img src="">
+                    <img src="img/testi-6.jpg">
                     <span>Izabela Barbarancea</span>
                     <div class="t-stars">
                         <i class="fas fa-star"></i>
@@ -347,7 +299,7 @@
                     </div>
                 </div>
                 <div class="sw-card">
-                    <img src="">
+                    <img src="img/testi-5.jpg">
                     <span>Evelin Eve</span>
                     <div class="t-stars">
                         <i class="fas fa-star"></i>
@@ -358,7 +310,7 @@
                     </div>
                 </div>
                 <div class="sw-card">
-                    <img src="">
+                    <img src="img/testi-6.jpg">
                     <span>Florina Butiu</span>
                     <div class="t-stars">
                         <i class="fas fa-star"></i>
@@ -369,7 +321,7 @@
                     </div>
                 </div>
                 <div class="sw-card">
-                    <img src="">
+                    <img src="img/testi-5.jpg">
                     <span>Hasoti Nicolae</span>
                     <div class="t-stars">
                         <i class="fas fa-star"></i>
@@ -383,23 +335,7 @@
         </section>
 
         <section class="stats">
-            <div class="box">
-                <i class="fas fa-calendar-alt"></i>
-                <span class="stats-1span">9</span>
-                <span>Ani De Experiența</span>
-            </div>
 
-            <div class="box">
-                <i class="fas fa-handshake"></i>
-                <span class="stats-1span">365 +</span>
-                <span>Părinți Mulțumiți</span>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-chalkboard-teacher"></i>
-                <span class="stats-1span">20 +</span>
-                <span>Educatori</span>
-            </div>
         </section>
 
         <section class="teachers">
@@ -463,6 +399,7 @@
     </main>
 
     <footer></footer>
+    <script src="functions.js"></script>
     <script src="app.js"></script>
 </body>
 
